# mksession

./: .gitignore  README.md  cabal.project  default.nix  flake.nix  mksession.cabal  session.yaml
mksession/: Main.hs  mksession.cabal
mksession/app/: Main.hs
mksession/src/: MkSession.hs  MkSessionUtils.hs
