cabal-version: 3.0
name:          mksession
version:       0.1.0.0
license:       MIT
build-type:    Simple

common warnings
  ghc-options:        -Wall
  default-language:   Haskell2010
  default-extensions:
    NoStarIsType
    QuasiQuotes

executable exe
  import:         warnings
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , aeson
    , base                  ^>=4.19.0.0
    , directory
    , filepath
    , mksession
    , optparse-applicative
    , yaml

library
  import:           warnings
  hs-source-dirs:   src
  exposed-modules:
    MkSession
    MkSessionUtils

  build-depends:
    , aeson
    , base                  ^>=4.19.0.0
    , bytestring
    , directory
    , filepath
    , neat-interpolation
    , optparse-applicative
    , text
    , yaml

  default-language: Haskell2010
